# courier

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README-zh.md  README.md  build.rs  mkdocs.yml
.cargo/: config.toml
.codex/skills/criew-development/: SKILL.md
.codex/skills/criew-development/agents/: openai.yaml
.codex/skills/criew-wiki-authoring/: SKILL.md
.codex/skills/criew-wiki-authoring/agents/: openai.yaml
.codex/skills/criew-wiki-authoring/references/: page-patterns.md  publish-workflow.md  style-guide.md
.githooks/: README.md  commit-msg  prepare-commit-msg
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  wiki-pages.yml
docs/: code-guildline-cn.md  code-guildline.md  code-preview-vim-prototype.md  config.example.toml  design.md  mvp-milestones.md  reply-format-spec.md  reply-mvp-milestones.md  vim-mvp-milestones.md
docs/architecture/: design.md
docs/development/: code-guildline-cn.md  code-guildline.md
docs/milestones/: mvp-milestones.md  reply-mvp-milestones.md  vim-mvp-milestones.md
docs/presentations/: README.md  kernel-dev-criew-onboarding-beamer.tex  kernel-dev-criew-onboarding.json  kernel-dev-criew-onboarding.pptx
docs/reference/: config.example.toml
docs/specs/: code-preview-vim-prototype.md  reply-format-spec.md
migrations/: 0001_init.sql  0002_patch_workflow.sql  0003_reply_send_workflow.sql  0004_thread_sort_by_mail_date.sql  0005_mail_query_indexes.sql
scripts/: check-binary-release-packaging.sh  check-commit-messages.sh  check-coverage.sh  generate-pptx.py  generate-release-checksums.sh  generate-release-notes.sh  package-binary-release-assets.sh  package-release-assets.sh  prepare-wiki-site.py  wiki-lint.sh  wiki-site.sh
scripts/lib/: path-utils.sh
src/: main.rs
src/app/: cli.rs  mod.rs  patch.rs  sync.rs  update.rs
src/domain/: mod.rs  models.rs  subscriptions.rs
src/infra/: b4.rs  b4_vendor.rs  bootstrap.rs  config.rs  db.rs  error.rs  imap.rs  logging.rs  mail_parser.rs  mail_store.rs  mod.rs  patch_store.rs  reply_store.rs  sendmail.rs  ui_state.rs
src/ui/: mod.rs  tui.rs
src/ui/tui/: config.rs  input.rs  keymap.rs  palette.rs  preview.rs  render.rs  reply.rs  tests.rs
xtask/src/: main.rs
