[package]
name = "courier"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "5.0"
quick-xml = "0.37"
ratatui = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
webpki-roots = "1.0"
