[package]
name = "criew"
authors = ["Chen Miao"]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
description = "Terminal-first Linux kernel patch mail workflow TUI"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/ChenMiaoi/CRIEW"
repository = "https://github.com/ChenMiaoi/CRIEW"
documentation = "https://docs.rs/criew"
keywords = ["tui", "email", "patch", "kernel", "workflow"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE",
    "/README.md",
    "/README-zh.md",
    "/build.rs",
    "/docs/**",
    "/migrations/**",
    "/src/**",
    "/vendor/b4/b4.sh",
    "/vendor/b4/COPYING",
    "/vendor/b4/src/b4/*.py",
    "/vendor/b4/src/b4/templates/*.example",
    "/vendor/b4/src/b4/man/b4.5",
    "/vendor/b4/src/b4/man/b4.5.rst",
    "/vendor/b4/patatt/COPYING",
    "/vendor/b4/patatt/patatt/*.py",
]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "5.0"
quick-xml = "0.37"
ratatui = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
webpki-roots = "1.0"
